# wgpu-lab

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
assets/: house.blend
executables/: learn_textures.cpp  learn_uniforms.cpp  learn_vertex_buffers.cpp  perf_map_iteration.cpp  sample_buffer.cpp  sample_pipeline.cpp  sample_texture.cpp  sample_uniform_buffer.cpp  sample_window.cpp  sample_window_shader.cpp  test.cpp  test_buffers.cpp  test_instanced_dots.cpp  test_instancing.cpp  test_pipeline.cpp  test_span.cpp  test_uniform_buffers.cpp  test_windows.cpp  tutorial_vertex_buffers.h
exes/: sample_dynamic_instances.cpp  sample_texture.cpp  sample_window.cpp  test_span.cpp  test_windows.cpp
libs/webgpu-dawn/: CMakeLists.txt
libs/webgpu-dawn/cmake/: FetchDawn.cmake
samples/: sample_buffer.cpp  sample_dynamic_instances.cpp  sample_graph.cpp  sample_graph_visualization.cpp  sample_graph_visualization2.cpp  sample_instancing.cpp  sample_pipeline.cpp  sample_texture.cpp  sample_uniform_buffer.cpp  sample_vertex_buffer.cpp  sample_window.cpp  sample_window_shader.cpp  test_buffer.cpp  test_buffers.cpp  test_link_hash.cpp  test_move_semantics.cpp  test_thread.cpp  test_tinygltf.cpp  test_uniform_buffers.cpp  test_unordered_set.cpp  test_windows.cpp
samples/assets/: house.blend1  house.glb  house.gltf
samples/shaders/: draw_colored.wgsl  sample_graph.wgsl  sample_graph_2.wgsl  test2.wgsl  vbuf.wgsl
scripts/: fetch_lab_dependencies.py  lab_fetch_dependencies.py  lab_helpers.py
shaders/: learn_textures.wgsl  sample_dynamic_instances.wgsl  sample_graph.wgsl  sample_graph_edge_shader.wgsl  sample_texture.wgsl  sample_uniform_buffer.wgsl  test.wgsl  test_instancing.wgsl  test_uniform.wgsl  vbuf2.wgsl
src/: adapter.h  device.h  lab  lab.cpp  lab.h  lab_objects.h  lab_pipeline.cpp  lab_pipeline.h  lab_shader.cpp  lab_shader.h  lab_state.cpp  lab_state.h  lab_surface.cpp  lab_surface.h  lab_webgpu.cpp  lab_webgpu.h  lab_window.cpp  lab_window.h  main.cpp  webgpu-utils.cpp  webgpu-utils.h
src/cpp/: lab.cpp  lab_pipeline.cpp  lab_surface.cpp
src/detail/: lab.cpp  lab_pipeline.cpp  lab_shader.cpp  lab_surface.cpp  lab_webgpu.cpp  lab_window.cpp
src/extra/: lab_enums.h  lab_mapped_vram.h  lab_objects.h  lab_pipeline_defaults.h  lab_public.h  lab_state.h
src/headers/: lab.h  lab_buffer.h  lab_enums.h  lab_mapped_vram.h  lab_objects.h  lab_pipeline.h  lab_shader.h  lab_state.h  lab_stl_deps.h  lab_surface.h  lab_webgpu.h  lab_window.h
src/objects/: lab_buffer.h  lab_pipeline.h  lab_shader.h  lab_surface.h  lab_texture.h  lab_webgpu.h  lab_window.h
src/tests/: test_window.cpp
tests/: test_buffer.cpp  test_span.cpp  test_window.cpp  test_window_2.cpp  test_windows.cpp  tutorial_buffer.cpp
tutorial/: main.cpp  webgpu-utils.cpp
